# autodoc-agent

./: .env.example  CHANGELOG.md  README.md  main.py  pyproject.toml
autodoc/: cli.py  config.py  logger.py
autodoc/agents/: api_writer.py  architecture.py  auth_writer.py  base.py  critic.py  db_writer.py  deploy_writer.py  planner.py
autodoc/graph/: pipeline.py
autodoc/ingestion/: detector.py  fetcher.py  graph.py  parser.py
autodoc/llm/: base.py  client.py  mock.py
autodoc/models/: doc_state.py  manifest.py
autodoc/prompts/: api.j2  architecture.j2  auth.j2  critic.j2  db.j2  deploy.j2
autodoc/renderers/: html_site.py  markdown.py  pdf.py
autodoc/templates/: doc.md.j2
autodoc/templates/site/: index.html.j2  section.html.j2
autodoc/utils/: prompt_renderer.py
docs/sample-output/: documentation.md  manifest.json
docs/sample-output/site/: index.html
output/: 01_architecture.md  02_api_reference.md  03_data_models.md  04_authentication.md  05_deployment.md  documentation.md  manifest.json
output/site/: index.html
tests/: test_agents.py  test_critic.py  test_renderers.py  test_writers.py
