[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodoc"
version = "0.1.0"
description = "AI agent that generates technical documentation for Python codebases"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=61.0",
]

[project.scripts]
autodoc = "autodoc.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
