[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodoc"
version = "0.1.0"
description = "AI agent that generates technical documentation for Python codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["documentation", "ai", "agents", "langraph", "anthropic", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "anthropic>=0.25.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=61.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/autodoc-agent"
Repository = "https://github.com/yourusername/autodoc-agent"
Issues = "https://github.com/yourusername/autodoc-agent/issues"

[project.scripts]
autodoc = "autodoc.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
